# lordeckcodes-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: card.rs  deck.rs  encoder.rs  error.rs  lib.rs
tests/: DeckCodesTestData.txt  test.rs
