[package]
name = "lordeckcodes"
description = "Legends of Runeterra deck encoder/decoder"
homepage = "https://github.com/iulianR/lordeckcodes-rs"
repository = "https://github.com/iulianR/lordeckcodes-rs"
documentation = "https://docs.rs/lordeckcodes"
version = "0.2.0"
authors = ["Iulian Gabriel Radu <iulian.radu67@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["encoder", "decoder", "riot-games", "runeterra", "legends-of-runeterra"]
categories = ["encoding"]
publish = false

[features]
default = ["serde"]

[dependencies]
data-encoding = "2.1.2"
varint = "0.9.0"
lazy_static = "1.4.0"

serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
