[package]
name = "lordeckcodes"
description = "Legends of Runeterra deck encoder/decoder"
homepage = "https://github.com/iulianR/lordeckcodes-rs"
repository = "https://github.com/iulianR/lordeckcodes-rs"
documentation = "https://docs.rs/lordeckcodes"
# also update README.md
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["encoder", "decoder", "riot-games", "runeterra", "legends-of-runeterra"]
categories = ["encoding"]
publish = false

[features]
default = ["serde"]

[dependencies]
data-encoding = "2.3"
lazy_static = "1.4"
thiserror = "1.0"
varint-rs = "2.2"

serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
